added quick and dirty bootstrap footer

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,29 +1,41 @@
-<div class="row well" id='3'>
-  <h1>Lorem ipsum dolor sit.</h1>
-  <p>
-    Lorem ipsum dolor sit amet, sed probo adolescens te. Nec ea solet percipitur. Velit quando commodo sed ut, paulo soluta quaerendum vix ut, id aliquip constituam pri. Ex quo solet molestie. Pertinax hendrerit contentiones ei mea. Eu solet dolorem apeirian his.
+<div class="row">
+  <div class="col-sm-12 col-md-8">
+    <article class="row card" id='3'>
+      <h1>Lorem ipsum dolor sit.</h1>
+      <p>
+        Lorem ipsum dolor sit amet, sed probo adolescens te. Nec ea solet percipitur. Velit quando commodo sed ut, paulo soluta quaerendum vix ut, id aliquip constituam pri. Ex quo solet molestie. Pertinax hendrerit contentiones ei mea. Eu solet dolorem apeirian his.
 
-    Quo te legere dicunt, qui ad nemore singulis, nam nibh audiam an. Mel ex eius consul. Purto inimicus signiferumque sed et. Ex cum gloriatur assueverit, pri soleat delectus theophrastus id. An doctus scripta mei, melius accusata deseruisse per eu. Sit platonem rationibus eu.
-  </p>
-</div>
+        Quo te legere dicunt, qui ad nemore singulis, nam nibh audiam an. Mel ex eius consul. Purto inimicus signiferumque sed et. Ex cum gloriatur assueverit, pri soleat delectus theophrastus id. An doctus scripta mei, melius accusata deseruisse per eu. Sit platonem rationibus eu.
+      </p>
+    </article>
 
-<div class="row well" id='2'>
-  <h1>Lorem ipsum dolor sit amet.</h1>
-  <p>
-    Lorem ipsum dolor sit amet, virtute electram comprehensam est ne. Cum cu placerat deserunt. Te vel atomorum praesent salutandi. Deserunt praesent cum at.
+    <article class="row card" id='2'>
+      <h1>Lorem ipsum dolor sit amet.</h1>
+      <p>
+        Lorem ipsum dolor sit amet, virtute electram comprehensam est ne. Cum cu placerat deserunt. Te vel atomorum praesent salutandi. Deserunt praesent cum at.
 
-    Debet assentior id mel, quo cu persius epicuri senserit. Sea feugait probatus cu. Te usu solet labores necessitatibus. No vix etiam consequat. No his minimum salutandi vulputate, meis vivendo platonem usu ea.
+        Debet assentior id mel, quo cu persius epicuri senserit. Sea feugait probatus cu. Te usu solet labores necessitatibus. No vix etiam consequat. No his minimum salutandi vulputate, meis vivendo platonem usu ea.
 
-    Id eos quando invenire, vim dicant altera rationibus at. Qui dicta aliquam saperet an, fuisset scaevola molestiae et cum. Ius et elitr labore mediocritatem, ad quas malorum iudicabit eos. No populo vocibus vis. Diceret neglegentur pri ei, accusamus adversarium definitionem vim ad, ius eu dico commune. Cum quot movet facete an, lobortis complectitur vim ut.
-  </p>
-</div>
+        Id eos quando invenire, vim dicant altera rationibus at. Qui dicta aliquam saperet an, fuisset scaevola molestiae et cum. Ius et elitr labore mediocritatem, ad quas malorum iudicabit eos. No populo vocibus vis. Diceret neglegentur pri ei, accusamus adversarium definitionem vim ad, ius eu dico commune. Cum quot movet facete an, lobortis complectitur vim ut.
+      </p>
+    </article>
 
 
-<div class="row well" id='1'>
-  <h1>Lorem ipsum dolor sit.</h1>
-  <p>
-    Lorem ipsum dolor sit amet, ei mea veniam maluisset, an prima saepe iudicabit quo, et sea nostrud legendos. Eam ne aeterno nostrud, vim ei duis nobis inciderint, eam nisl senserit ea. His ei numquam mandamus. Ne eum affert feugait, nusquam dolores ad his.
+    <article class="row card" id='1'>
+      <h1>Lorem ipsum dolor.</h1>
+      <p>
+        Lorem ipsum dolor sit amet, ei mea veniam maluisset, an prima saepe iudicabit quo, et sea nostrud legendos. Eam ne aeterno nostrud, vim ei duis nobis inciderint, eam nisl senserit ea. His ei numquam mandamus. Ne eum affert feugait, nusquam dolores ad his.
 
-    Cu nisl perfecto definitionem usu, pro at quando commune explicari. Qui aliquip salutatus deterruisset ea. Iuvaret legimus blandit ut quo, impetus detracto adipiscing usu an. Quo nibh duis dicta an, te similique efficiantur cum. Voluptua officiis in vix, vis alia mnesarchum in.
-  </p>
+        Cu nisl perfecto definitionem usu, pro at quando commune explicari. Qui aliquip salutatus deterruisset ea. Iuvaret legimus blandit ut quo, impetus detracto adipiscing usu an. Quo nibh duis dicta an, te similique efficiantur cum. Voluptua officiis in vix, vis alia mnesarchum in.
+      </p>
+    </article>
+  </div>
+
+  <aside class="card hidden-sm-down col-md-3 offset-md-1">
+    <ul>
+      <li>Lorem ipsum dolor sit.</li>
+      <li>Lorem ipsum dolor sit amet.</li>
+      <li>Lorem ipsum dolor.</li>
+    </ul>
+  </aside>
 </div>
