--- a/src/app/gallery/gallery.component.html
+++ b/src/app/gallery/gallery.component.html
@@ -1,3 +1,7 @@
-<p>
-  gallery works!
-</p>
+<div class="row">
+  <div class="col-sm-12 col-md-12">
+    <div *ngFor="let image of images" class="col-sm-6 col-md-4 col-xl-3 galleryDiv">
+      <img src={{image.media}}>
+    </div>
+  </div>
+</div>
