--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="col-sm-12 col-md-8">
-    <article *ngFor="let article of articles; let i = index; let e = even" class="row card" id='{{i}}'>
+    <article *ngFor="let article of articles; let i = index; let e = even" class="row card" id='{{i}}home'>
       <h1>{{article.title}}</h1>
       <div>
         <div *ngIf="article.mimetype">
@@ -20,8 +20,8 @@
 
   <aside class="hidden-sm-down col-md-3 offset-md-1">
     <ul>
-      <li *ngFor="let article of articles; let i = index" class="list-group-item" id='{{i}}'>
-        <a href="#{{i}}"> {{article.title}}</a>
+      <li *ngFor="let article of articles; let i = index" class="list-group-item">
+        <a href="#{{i}}home"> {{article.title}}</a>
       </li>
     </ul>
   </aside>
