fixed anchor scroll https://github.com/angular/angular/issues/6595

--- a/src/app/activity/activity.component.html
+++ b/src/app/activity/activity.component.html
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="col-sm-12 col-md-8">
-    <article *ngFor="let activity of activities; let i = index; let e = even" class="row card" id='{{i}}activity'>
+    <article *ngFor="let activity of activities; let i = index; let e = even" class="row card" id='{{i}}'>
       <h1>{{activity.title}}</h1>
       <div>
         <div *ngIf="activity.mimetype">
@@ -21,7 +21,7 @@
   <aside class="hidden-sm-down col-md-3 offset-md-1">
     <ul>
       <li *ngFor="let activity of activities; let i = index" class="list-group-item">
-        <a [routerLink]="activity" fragment="{{i}}activity"> {{activity.title}}</a>
+        <a (click)="goTo(i)">{{activity.title}}</a>
       </li>
     </ul>
   </aside>
