--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,11 @@
 /* You can add global styles to this file, and also import other style files */
+h1{
+  text-align: center;
+  margin: 20px;
+  font-weight: bolder;
+}
+
+h2{
+  text-align: center;
+  margin: 10px;
+}
