--- a/src/app/activity/activity.component.css
+++ b/src/app/activity/activity.component.css
@@ -3,14 +3,25 @@ img{
   margin:10px;
 }
 
-h1{
+.participants{
   text-align: center;
-  margin-bottom: 10px;
+  margin-bottom: 20px;
 }
 
 .rightImg{float:right;}
 .leftImg{float:left;}
 
 article{
-  margin-bottom: 30px;
+  margin-top: 30px;
+  padding-left: 20px;
+  padding-right: 20px;
+  background-color: #e4e4e4;
+}
+
+.asideMenu{
+  background-color: #e4e4e4;
+}
+
+a{
+  color: #1d5586;
 }
