--- a/src/app/activity/activity.component.html
+++ b/src/app/activity/activity.component.html
@@ -1,7 +1,8 @@
 <div class="row">
-  <div class="col-sm-12 col-md-8">
+  <h1>Activities</h1>
+  <div class="col-sm-12 col-md-9">
     <article *ngFor="let activity of activities; let i = index; let e = even" class="row card" id='{{i}}'>
-      <h1>{{activity.title}}</h1>
+      <h2>{{activity.title}}</h2>
       <div>
         <div *ngIf="activity.mimetype">
           <div *ngIf="e">
@@ -15,12 +16,18 @@
               {{activity.text}}
         </p>
       </div>
+      <div class="participants container">
+        <a href="#coming{{i}}" class="btn btn-link" data-toggle="collapse">Participants</a>
+        <div id="coming{{i}}" class="collapse">
+          {{activity.participants}}
+        </div>
+      </div>
     </article>
   </div>
 
-  <aside class="hidden-sm-down col-md-3 offset-md-1">
+  <aside class="hidden-sm-down col-md-3">
     <ul>
-      <li *ngFor="let activity of activities; let i = index" class="list-group-item">
+      <li *ngFor="let activity of activities; let i = index" class="list-group-item asideMenu">
         <a [routerLink]="['/activity']" (click)="goTo(i)">{{activity.title}}</a>
       </li>
     </ul>
