--- a/src/app/gallery/gallery.component.html
+++ b/src/app/gallery/gallery.component.html
@@ -1,4 +1,5 @@
 <div class="row">
+  <h1>Gallery</h1>
   <div class="col-sm-12 col-md-12">
     <div *ngFor="let image of images" class="col-sm-6 col-md-4 col-xl-3 galleryDiv">
       <img src={{image.media}}>
