--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -3,14 +3,20 @@ img{
   margin:10px;
 }
 
-h1{
-  text-align: center;
-  margin-bottom: 10px;
-}
-
 .rightImg{float:right;}
 .leftImg{float:left;}
 
 article{
-  margin-bottom: 30px;
+  margin-top: 30px;
+  padding-left: 20px;
+  padding-right: 20px;
+  background-color: #fdd9d9;
+}
+
+.asideMenu{
+  background-color: #fdd9d9;
+}
+
+a{
+  color: #820f0f;
 }
