page gestion in header first draft

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,6 +1,7 @@
 <div class="row">
   <h1>Home</h1>
   <div class="col-sm-12 col-md-9">
+    <!-- Admin form -->
     <form *ngIf="admin" (ngSubmit)="submitArticle()" class="row card" id='newArticle'>
       <div class="form-group">
         <input type="text" class="form-control" id="title" [(ngModel)]="newArticle.title" name="title">
@@ -35,6 +36,7 @@
       </div>
     </form>
 
+    <!-- Articles -->
     <article *ngFor="let article of articles; let i = index; let e = even" class="row card" id='{{i}}home'>
       <h2>{{article.title}}</h2>
       <div>
