--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -8,10 +8,64 @@
     </div>
   </div>
   <nav class="navbar navbar-light bg-faded">
-    <div class="nav navbar-nav container">
-      <a class="nav-item nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
-      <a class="nav-item nav-link float-xs-right" href="#/gallery">Gallery</a>
-      <a class="nav-item nav-link float-xs-right" href="#/activity">Activities</a>
-    </div>
+      <div *ngIf="admin"><!-- Admin navbar -->
+        <div class="nav navbar-nav container">
+          <div class="nav-item nav-link col-xs-2 float-xs-right">
+            <div class="input-group">
+              <input type="text" class="form-control" [(ngModel)]="newPage.name" name="name">
+              <span class="input-group-btn">
+                <button type="button"
+                  class="btn btn-default dropdown-toggle"
+                  data-toggle="dropdown"
+                  aria-haspopup="true"
+                  aria-expanded="false">
+                  <span class="caret"></span>
+                </button>
+                <ul class="dropdown-menu">
+                  <li><a href="#" (click)="addPage(0)">Blog type</a></li>
+                  <li><a href="#" (click)="addPage(1)">Activity type</a></li>
+                  <li><a href="#" (click)="addPage(2)">Gallery type</a></li>
+                </ul>
+              </span>
+            </div>
+          </div>
+
+          <div *ngFor="let page of pages; let i = index; let e = even">
+            <div class="nav-item nav-link col-xs-2" [ngClass]="{'float-xs-left': page.position===0, 'float-xs-right': page.position!==0}">
+              <div class="input-group">
+                <input type="text" class="form-control" aria-label="..." [(ngModel)]="page.name" name="name">
+                <div class="input-group-btn">
+                  <button type="button"
+                    class="btn btn-default dropdown-toggle"
+                    data-toggle="dropdown"
+                    aria-haspopup="true"
+                    aria-expanded="false">
+                    <span class="caret"></span>
+                  </button>
+                  <ul class="dropdown-menu">
+                    <li><a href="#">-></a></li>
+                    <li><a href="#"><-</a></li>
+                    <li role="separator" class="divider"></li>
+                    <li><a href="#">Delete</a></li>
+                    <li><a href="#">Edit</a></li>
+                    <li role="separator" class="divider"></li>
+                    <li><a routerLink="{{ page.position!==0 ? pageTypes[page.type]+'/'+page._id : '' }}">Go to</a></li>
+                  </ul>
+                </div><!-- /btn-group -->
+              </div><!-- /input-group -->
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div *ngIf="!admin"><!-- User navbar -->
+        <div class="nav navbar-nav container">
+          <div  *ngFor="let page of pages; let i = index; let e = even">
+            <a class="nav-item nav-link float-xs-right"
+            [ngClass]="{'float-xs-left': page.position===0, 'float-xs-right': page.position!==0, 'ml-1': page.position!==0}"
+            routerLink="{{ page.position!==0 ? pageTypes[page.type]+'/'+page._id : '#' }}">{{ page.name }}</a>
+          </div>
+        </div>
+      </div>
   </nav>
 </header>
