fixed homescroll plus hidden tag

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -2,7 +2,7 @@
   <h1>Home</h1>
   <div class="col-sm-12 col-md-9">
     <!-- Admin form -->
-    <form *ngIf="token" (ngSubmit)="submitArticle()" class="row card" id='newArticle'>
+    <form [hidden]="!token" (ngSubmit)="submitArticle()" class="row card" id='newArticle'>
       <div class="form-group">
         <input type="text" class="form-control" id="title" [(ngModel)]="newArticle.title" name="title">
       </div>
@@ -55,7 +55,7 @@
   <aside class="hidden-sm-down col-md-3">
     <ul>
       <li *ngFor="let article of articles; let i = index" class="list-group-item asideMenu">
-        <a href="#{{i}}home"> {{article.title}}</a>
+        <a (click)="goTo(i+'home')"> {{article.title}}</a>
       </li>
     </ul>
   </aside>
