--- a/src/app/media-form/media-form.component.html
+++ b/src/app/media-form/media-form.component.html
@@ -1,5 +1,5 @@
 <div class="row">
-<form (ngSubmit)="submitMedias()" class="col-md-6 offset-md-3" *ngIf="token">
+<form (ngSubmit)="submitMedias()" class="col-md-6 offset-md-3">
   <div class="row">
     <div class="form-group col-xs-12">
       <label class="custom-file col-xs-12">
