--- a/src/app/activity/activity.component.css
+++ b/src/app/activity/activity.component.css
@@ -1,34 +1,34 @@
 img{
-  width: 15%;
+  width: 20vw;
   margin:10px;
 }
 
-.participants{
-  float: right;
+.head {
+  padding-top: 0.5rem;
 }
 
-.participants p{
-  margin-right: 10px;
+.arrow-down {
+  width: 0;
+  height: 0;
+  border-left: 5px solid transparent;
+  border-right: 5px solid transparent;
+
+  border-top: 5px solid black;
+
+  position: absolute;
+  top: 40%;
+  left: -2.5px;
 }
 
-#accordion{
-  padding: 0;
-}
+.arrow-up {
+  width: 0;
+  height: 0;
+  border-left: 5px solid transparent;
+  border-right: 5px solid transparent;
 
-.rightImg{float:right;}
-.leftImg{float:left;}
+  border-bottom: 5px solid black;
 
-article{
-  margin-top: 30px;
-  padding-left: 20px;
-  padding-right: 20px;
-  background-color: #e4e4e4;
-}
-
-.asideMenu{
-  background-color: #e4e4e4;
-}
-
-a{
-  color: #1d5586;
+  position: absolute;
+  bottom: 40%;
+  left: -2.5px;
 }
