improved header and footer responsiv design

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,6 +1,6 @@
 <footer class="card-footer">
   <div class="container">
-    <div class="col-sm-4">
+    <div class="col-sm-4 hidden-sm-down">
       <div class="card-block">
         <h3 class="card-header">Lorem ipsum</h3>
       </div>
@@ -11,7 +11,7 @@
         <li>Lorem ipsum dolor sit amet.</li>
       </ul>
     </div>
-    <div class="col-sm-4">
+    <div class="col-sm-6 col-md-4 hidden-xs-down">
       <div class="card-block">
         <h3 class="card-header">Lorem ipsum</h3>
       </div>
@@ -22,7 +22,7 @@
         <li>Lorem ipsum dolor sit amet.</li>
       </ul>
     </div>
-    <div class="col-sm-4">
+    <div class="col-xs-12 col-sm-6 col-md-4">
       <div class="card-block">
         <h3 class="card-header">Lorem ipsum</h3>
       </div>
