--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,9 +1,9 @@
 <header>
   <div *ngIf="logo && banner" class="container pl-0 pr-0">
-    <div class="col-md-4 pl-0 pr-0">
+    <div class=" hidden-sm-down col-md-4 pl-0 pr-0">
       <img class="float-xs-let" [src]="logo"/>
     </div>
-    <div class="col-md-8 pl-0 pr-0">
+    <div class="col-sm-12 col-md-8 pl-0 pr-0">
       <img class="float-xs-right" [src]="banner"/>
     </div>
   </div>
