CSS Cleaning and Starting Page Feature
Some issue with the page system, to be continued

--- a/src/app/activity/activity.component.css
+++ b/src/app/activity/activity.component.css
@@ -7,6 +7,13 @@ img{
   padding-top: 0.5rem;
 }
 
+h4{
+  cursor: pointer;
+}
+h4:hover{
+  font-weight: bold;
+}
+
 .arrow-down {
   width: 0;
   height: 0;
