added activity/article/media count

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -36,7 +36,7 @@
     <div>
       <div class='navPageDiv'>
         <button class="btn btn-outline-primary btn-sm" (click)="offsetChange(-1)">←</button>
-        <span class='navButtonLike btn-sm'>{{1+offset/nbArticles}} / {{articleCount/nbArticles}}</span>
+        <span class='navButtonLike btn-sm'>{{1+offset/nbArticles}} / {{pageCount}}</span>
         <button class="btn btn-outline-primary btn-sm" (click)="offsetChange(1)">→</button>
       </div>
     </div>
