--- a/src/app/gallery/gallery.component.html
+++ b/src/app/gallery/gallery.component.html
@@ -1,9 +1,22 @@
-<div class="row">
+<div class="row galleryDivContainer">
   <h1>Gallery</h1>
-  <app-media-form *ngIf="token" (newMediaEvent)="newMedia($event)"></app-media-form>
+
+  <div class=popupContainer  *ngIf="token">
+    <button type="button" class="btn btn-info btn-lg" (click)="showFormPopup()">import media</button>
+    <app-popup *ngIf="displayFormPopup" class=popup [popupTitle]="'import media'" (onClose)="formPopupOnClose()">
+      <app-media-form (newMediaEvent)="newMedia($event)" ></app-media-form>
+    </app-popup>
+  </div>
+
   <div *ngFor="let image of images" class="galleryDiv col-xs-12 col-sm-6 col-md-4 col-xl-3">
-    <div class="thumbnail col-xs-12">
+    <div class="thumbnail col-xs-12" (click)="displayMedia(image)">
       <img src="/api/public/media/{{image.media}}/show">
     </div>
   </div>
+
+
+  <app-popup *ngIf="popupMedia != null" class=popup [popupTitle]="'Closer Look'" (onClose)="onDisplayMediaClose()">
+    <img src="/api/public/media/{{popupMedia.media}}/show">
+  </app-popup>
+
 </div>
