--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -3,14 +3,17 @@ img{
   margin:10px;
 }
 
+h2{
+  color: #003c6f;
+}
+
 .rightImg{float:right;}
 .leftImg{float:left;}
 
 article{
   padding: 20px;
-  margin: 0;
   border: 0;
-  border-radius: 0;
+  border-radius: 15px;
 }
 
 a{
