--- a/src/app/gallery/gallery.component.html
+++ b/src/app/gallery/gallery.component.html
@@ -2,7 +2,7 @@
   <h1>Gallery</h1>
 
   <div class=popupContainer  *ngIf="token">
-    <button type="button" class="btn btn-info btn-lg" (click)="showFormPopup()">import media</button>
+    <button type="button" class="btn btn-info btn-lg" (click)="showFormPopup()">add media(s)</button>
     <app-popup *ngIf="displayFormPopup" class=popup [popupTitle]="'import media'" (onClose)="formPopupOnClose()">
       <app-media-form (newMediaEvent)="newMedia($event)" ></app-media-form>
     </app-popup>
