--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -4,7 +4,7 @@
     <!-- Admin form -->
 
     <div class=popupContainer  *ngIf="token">
-      <button type="button" class="btn btn-info btn-lg" (click)="showFormPopup()">import media</button>
+      <button type="button" class="btn btn-info btn-lg" (click)="showFormPopup()">add article</button>
       <app-popup *ngIf="displayFormPopup" class=popup [popupTitle]="'Add new Article'" (onClose)="formPopupOnClose()">
         <app-article-form [pageId]="curId" (newArticleEvent)="newArticle($event)" ></app-article-form>
       </app-popup>
@@ -14,9 +14,14 @@
     <article *ngFor="let article of articles; let i = index; let e = even" class="row card" [ngClass]="{'articleEven': e, 'articleOdd': !e}" id='{{i}}home'>
       <h2>{{article.title}}</h2>
       <div>
-        <div *ngIf="article.mimetype">
+        <div *ngIf="article.mimetype && article.mimetype !== 'youtube'">
           <div>
             <img [ngClass]="{'rightImg': e, 'leftImg': !e}" src="/api/public/media/{{article.media}}/show">
+          </div>
+        </div>
+        <div *ngIf="article.mimetype === 'youtube'">
+          <div [ngClass]="{'rightImg': e, 'leftImg': !e}">
+              <app-youtube-embended [url]="article.media"></app-youtube-embended>
           </div>
         </div>
         <p style="text-indent: 1em;">
