--- a/src/app/youtube-embended/youtube-embended.component.html
+++ b/src/app/youtube-embended/youtube-embended.component.html
@@ -1,1 +1,1 @@
-<iframe [src]="url" frameborder="0" allowfullscreen></iframe>
+<iframe [src]="embendedUrl" frameborder="0" allowfullscreen></iframe>
