--- a/src/app/popup/popup.component.html
+++ b/src/app/popup/popup.component.html
@@ -7,7 +7,7 @@
     <div class="modal-dialog centered">
 
       <!-- Modal content-->
-      <div class="modal-content popupContent">
+      <div class="modal-content popupContent-{{popupWidth}}">
         <div class="modal-header">
           <h4 class="modal-title">{{popupTitle}}</h4>
         </div>
